...
                        enabled = state.maximum > 0,
                        valueRange = 0f..state.maximum.coerceAtLeast(1).toFloat(),
                        interactionSource = interactions,
                    )
                    ChapterButton(
                        R.string.next_chapter,
                        "reader-next",
                        state.nextEnabled,
                        state.foreground,
                    ) {
                        onAction(ReadMenuAction.NextChapter)
                    }
                }
...
